# tochtliv_cv_journey

prewitt/: CMakeLists.txt  naive_prewitt_operator.cc  naive_prewitt_operator.h  test_naive_prewitt.cc
